--- a/index.html
+++ b/index.html
@@ -4,10 +4,41 @@
     <meta charset="utf-8">
     <title>SIRH Web Site</title>
     <link rel="stylesheet" href="css/styles.css">
+<style>
+  body{
+  background-color:#297F87;
+}
+/**hr{
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  heigh: 5px;
+  width: 5%;
+}  **/
 
+h1, h2 {
+  color: #EDF6E5;
+}
+IMG{
+
+  width:140px;
+  height:140px;
+  border-radius:999px ;
+}
+
+HR {
+  border-color: red;
+
+}
+p{
+  font-size:25px;
+  Color:#440047;
+}
+
+</style>
   </head>
 
-  <body style="background-color:#297F87;" >
+  <body >
 
     <table cellspacing= "20">
     <tr>
