--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ p{
     <ol>
       <li>PRESIDENT(E):</li>
       <li>VICE-PRESIDENT(E):</li>
-      <li>SECRETAIRE GENERAL(E):</li>
-      <li>SECRETAIRE GENERAL(E) ADJOINT:</li>
+      <li>SECRETAIRE GENERAL(E):Luccene Honore</li>
+      <li>SECRETAIRE GENERAL(E) ADJOINT:Magdala Legrand</li>
       <li>RESPONSABLE FINACIER: Dr John Cemelus</li>
 
     </ol>
