--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ p{
       <li>VICE-PRESIDENT(E):</li>
       <li>SECRETAIRE GENERAL(E):Luccene Honore</li>
       <li>SECRETAIRE GENERAL(E) ADJOINT:Magdala Legrand</li>
-      <li>RESPONSABLE FINACIER: Dr John Cemelus</li>
+      <li>RESPONSABLE FINACIER: Dr Jones Cemelus</li>
 
     </ol>
     <hr>
