--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ p{
     <h2>Elections du Comite Directeur- 10 Octobre 2021</h2>
     <h3>Liste des candidats par poste.</h3>
     <ol>
-      <li>PRESIDENT(E):</li>
-      <li>VICE-PRESIDENT(E):</li>
+      <li>PRESIDENT(E): Wesly Lisme </li>
+      <li>VICE-PRESIDENT(E):Guedry Denis</li>
       <li>SECRETAIRE GENERAL(E):Luccene Honore</li>
       <li>SECRETAIRE GENERAL(E) ADJOINT:Magdala Legrand</li>
       <li>RESPONSABLE FINACIER: Dr Jones Cemelus</li>
