--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@ p{
 
 
     <form action="mailto: sirh1820@gmail.com"  method="post" enctype="text/plain">
-  <!--  <h3>Liste des candidats par poste.</h3>
+  <!--  
+<h3>Liste des candidats par poste.</h3>
       <p>PRESIDENT(E):</p>
       <p>VICE-PRESIDENT(E):</p>
       <p>SECRETAIRE GENERAL(E):</p>
       <p>SECRETAIRE GENERAL(E) ADJOINT:</p>
-      <p>RESPONSABLE FINACIER: 1- Dr Cemelus</p> -->
+      <p>RESPONSABLE FINACIER: 1- Dr Cemelus</p> 
+-->
+    
+    <!--
 
       <label for="">ELECTEUR (TRICE)</label>
       <input type="text" name="ELECTEUR " value=""><br>
